--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@mui/material": "^5.0.6",
@@ -21,9 +19,12 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^27.0.2",
     "framer-motion": "^4.1.17",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.0",
-    "socket.io-client": "^4.3.2"
+    "socket.io-client": "^4.3.2",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
